Adding student package and example with BufferedWriter, PrintWriter and FileWriter